--- a/src/theme.styl
+++ b/src/theme.styl
@@ -1,5 +1,5 @@
 @require "~cube-ui/src/common/stylus/var/color.styl"
-
+@require "common/stylus/index.styl"
 
 // action-sheet
 $action-sheet-color := $color-grey
