--- a/src/common/stylus/mixin.styl
+++ b/src/common/stylus/mixin.styl
@@ -20,3 +20,12 @@ extend-click()
     left: -10px
     right: -10px
     bottom: -10px
+
+// 布局默认padding
+container-padding()
+  padding: 0 18px
+  box-sizing: border-box
+
+// border默认
+border-default-1px()
+  border-bottom: 1px solid rgba(209,209,214,.2)
