--- a/src/common/stylus/variable.styl
+++ b/src/common/stylus/variable.styl
@@ -26,3 +26,6 @@ $font-sze-button-default = 15px
 
 // 布局定义规范
 $container-padding-size = 0 18px
+
+// border定义规范
+$border-default-1 = 1px solid rgba(209,209,214,.2)
