--- a/src/common/stylus/variable.styl
+++ b/src/common/stylus/variable.styl
@@ -22,7 +22,7 @@ $font-size-medium = 14px
 $font-size-medium-x = 16px
 $font-size-large = 18px
 $font-size-large-x = 22px
-$font-sze-button-default = 15px
+$font-size-button-default = 13px
 
 // 布局定义规范
 $container-padding-size = 0 18px
